<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ButtonClear">C</string>
    <string name="ButtonPlusMinus">±</string>
    <string name="ButtonDivide">÷</string>
    <string name="ButtonTimes">×</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ButtonMinus">-</string>
    <string name="ButtonPlus">+</string>
    <string name="ButtonEqual">=</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="Value"></string>
    <string name="Zero">0</string>
    <string name="emptyzero"></string>
    <string name="NameTag">Author: Tianyu(Michael) Xiang</string>

</resources>
