<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#FFC0C0C0"
    android:columnCount="2"
    android:onClick="clear"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:clickable="false"
        android:ems="10"
        android:gravity="center_vertical|right"
        android:text="@string/emptyzero" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/ButtonClear"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:onClick="clear"
        android:text="@string/ButtonClear" />

    <Button
        android:id="@+id/ButtonPlusMinus"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="1"
        android:onClick="plusMinus"
        android:text="@string/ButtonPlusMinus" />

    <Button
        android:id="@+id/ButtonDivide"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="1"
        android:onClick="divide"
        android:text="@string/ButtonDivide" />

    <Button
        android:id="@+id/ButtonTimes"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:onClick="times"
        android:text="@string/ButtonTimes" />

    <Button
        android:id="@+id/Button7"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:onClick="click7"
        android:text="@string/seven" />

    <Button
        android:id="@+id/Button8"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="2"
        android:onClick="click8"
        android:text="@string/eight" />

    <Button
        android:id="@+id/Button9"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="2"
        android:onClick="click9"
        android:text="@string/nine" />

    <Button
        android:id="@+id/Button4"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:onClick="click4"
        android:text="@string/four" />

    <Button
        android:id="@+id/Button5"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="3"
        android:onClick="click5"
        android:text="@string/five" />

    <Button
        android:id="@+id/Button6"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="3"
        android:onClick="click6"
        android:text="@string/six" />

    <Button
        android:id="@+id/ButtonPlus"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:onClick="plus"
        android:text="@string/ButtonPlus" />

    <Button
        android:id="@+id/Button1"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:onClick="click1"
        android:text="@string/one" />

    <Button
        android:id="@+id/Button2"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="4"
        android:onClick="click2"
        android:text="@string/two" />

    <Button
        android:id="@+id/Button3"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="4"
        android:onClick="click3"
        android:text="@string/three" />

    <Button
        android:id="@+id/ButtonEqual"
        android:layout_height="96dp"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="4"
        android:layout_rowSpan="2"
        android:onClick="equal"
        android:text="@string/ButtonEqual" />

    <Button
        android:id="@+id/Button0"
        android:layout_width="138dp"
        android:layout_column="0"
        android:layout_gravity="top|left"
        android:layout_row="5"
        android:onClick="click0"
        android:text="@string/zero" />

    <Button
        android:id="@+id/ButtonDot"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="5"
        android:onClick="dot"
        android:text="@string/dot" />

    <Button
        android:id="@+id/ButtonMinus"
        android:layout_column="1"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:onClick="minus"
        android:text="@string/ButtonMinus" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_row="5"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:text="@string/NameTag"
        android:textColor="#FFFF0000" />

</GridLayout>